--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "next-js-boilerplate",
   "version": "2.1.1",
+  "engines": {
+    "node": ">=14.0.0",
+    "yarn": ">=1.22.0",
+    "npm": "please-use-yarn"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
