--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
     "next": "^12.3.0",
     "next-seo": "^5.5.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.5.2",
+    "@tailwindcss/typography": "^0.5.2",
+    "tailwind-scrollbar": "github:adoxography/tailwind-scrollbar#pull/36/head"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
