--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/typography": "^0.5.2",
-    "tailwind-scrollbar": "github:adoxography/tailwind-scrollbar#pull/36/head"
+    "tailwind-scrollbar": "github:adoxography/tailwind-scrollbar#pull/36/head",
+    "@segment/analytics-next": "^1.41.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
