--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "@tailwindcss/typography": "^0.5.2",
     "tailwind-scrollbar": "github:adoxography/tailwind-scrollbar#pull/36/head",
     "@segment/analytics-next": "^1.41.1",
-    "@supabase/supabase-js": "^1.35.3"
+    "@supabase/supabase-js": "^1.35.3",
+    "next-pwa": "^5.6.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
