feat: remove jest

--- a/.eslintrc
+++ b/.eslintrc
@@ -63,12 +63,9 @@
     // Configuration for testing
     {
       "files": ["**/*.test.ts", "**/*.test.tsx"],
-      "plugins": ["jest", "jest-formatting", "testing-library", "jest-dom"],
+      "plugins": ["testing-library"],
       "extends": [
-        "plugin:jest/recommended",
-        "plugin:jest-formatting/recommended",
-        "plugin:testing-library/react",
-        "plugin:jest-dom/recommended"
+        "plugin:testing-library/react"
       ]
     },
     // Configuration for e2e testing (Cypress)
